move default prompt from GuidePrompt into config

--- a/example/transform/openai_json_model.ipynb
+++ b/example/transform/openai_json_model.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,24 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +92,7 @@
        "  'TransformOpenAIFlow']}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,12 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "guided_prompt = GuidedPrompt(\n",
-    "    instruction=\"Generate one question and its corresponding answer based on the context. Follow the format of the examples below to include context, question, and answer in the response in json\"\n",
+    "    instruction=\"Generate one question and its corresponding answer based on the context. Follow the format of the examples below to include context, question, and answer in the response in json\",\n",
+    "    examples=[\n",
+    "            Context(\n",
+    "                context=\"The quick brown fox jumps over the lazy black dog.\",\n",
+    "                question=\"What is the color of the fox?\",\n",
+    "                answer=\"brown.\",\n",
+    "            ),\n",
+    "            Context(\n",
+    "                context=\"The quick brown fox jumps over the lazy black dog.\",\n",
+    "                question=\"What is the color of the dog?\",\n",
+    "                answer=\"black.\",\n",
+    "            ),\n",
+    "        ],\n",
     ")"
    ]
   },
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,32 +210,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:03<00:00,  1.51s/it]\n"
+      "100%|██████████| 2/2 [00:02<00:00,  1.44s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "[{'output': [{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "      'question': 'What color is the sky?',\n",
+       "      'question': 'What is the color of the sky?',\n",
        "      'answer': 'blue.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x118c72bf0>},\n",
-       " {'output': [{'response': [{'context': 'My name is bobby and I am a talent software engineer working on AI/ML.',\n",
+       "  'root': <uniflow.node.Node at 0x110c76200>},\n",
+       " {'output': [{'response': [{'context': 'My name is bobby and I am a talented software engineer working on AI/ML.',\n",
        "      'question': \"What is Bobby's profession?\",\n",
        "      'answer': 'software engineer working on AI/ML.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x118c72da0>}]"
+       "  'root': <uniflow.node.Node at 0x110c763b0>}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,19 +256,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What color is the sky?',\n",
+       "   'question': 'What is the color of the sky?',\n",
        "   'answer': 'blue.'}],\n",
        " 'error': 'No errors.'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +333,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x118c72e60>"
+       "<graphviz.graphs.Digraph at 0x11014f460>"
       ]
      },
      "metadata": {},
@@ -342,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +393,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1085e3430>"
+       "<graphviz.graphs.Digraph at 0x110174730>"
       ]
      },
      "metadata": {},
