add comment for rater examples

--- a/example/rater/json_formatted_classification.ipynb
+++ b/example/rater/json_formatted_classification.ipynb
@@ -1,8 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use AutoRater to classify answer label from a Jupyter Notebook\n",
+    "\n",
+    "In this example, we will show you how to use autorater to classify answer label from a given jupyter notebook.\n",
+    "\n",
+    "### Before running the code\n",
+    "\n",
+    "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation.\n",
+    "\n",
+    "Next, you will need a valid [OpenAI API key](https://platform.openai.com/api-keys) to run the code. Once you have the key, set it as the environment variable `OPENAI_API_KEY` within a `.env` file in the root directory of this repository. For more details, see this [instruction](https://github.com/CambioML/uniflow/tree/main#api-keys)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import dependency\n",
+    "First, we set system paths and import libraries."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,38 +62,20 @@
     "from IPython.display import display\n",
     "\n",
     "from uniflow.flow.client import RaterClient\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
     "from uniflow.flow.config  import RaterClassificationConfig\n",
     "from uniflow.op.model.model_config  import OpenAIModelConfig\n",
-    "from uniflow.viz import Viz\n",
     "from uniflow.op.prompt_schema import Context\n",
     "\n",
     "load_dotenv()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'],\n",
-       " 'transform': ['TransformCopyFlow',\n",
-       "  'TransformHuggingFaceFlow',\n",
-       "  'TransformLMQGFlow',\n",
-       "  'TransformOpenAIFlow'],\n",
-       " 'rater': ['RaterFlow']}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "FlowFactory.list()"
+    "### Prepare the input data\n",
+    "\n",
+    "We use 3 example data. Each one is a tuple with context, question and answer to be labeled. The grounding truth label of first one is correct and other are incorrect. Then we use `Context` class to wrap them."
    ]
   },
   {
@@ -105,6 +110,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up config and run client\n",
+    "\n",
+    "In this example, we will use the [`OpenAIModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L17) as the default LLM to generate questions and answers. If you want to use open-source models, you can replace the `OpenAIConfig` and `OpenAIModelConfig` with `HuggingfaceConfig` and [`HuggingfaceModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L27).\n",
+    "\n",
+    "We use the default `guided_prompt` in `RaterClassificationConfig`, which contains two examples, labeled by Yes and No. The default examples are also wrap by `Context` class with fileds of context, question, answer (and label), consistent with input data.\n",
+    "\n",
+    "The response format is `json`, so the model returns json string as output instead of plain text, which can be processed more conveniently. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -123,6 +141,13 @@
     "    model_config=OpenAIModelConfig(num_call=3, response_format={\"type\": \"json_object\"}),\n",
     "    label2score={\"Yes\": 1.0, \"No\": 0.0})\n",
     "client = RaterClient(config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we can run this client. Client will sample output from LLM 3 times to generate final result."
    ]
   },
   {
